--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "Kalpurush";
+  src: url("../src/assets/Kalpurush.woff") format("woff");
+}
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
